--- a/mega.css
+++ b/mega.css
@@ -23,7 +23,7 @@ nav a{
     text-decoration: none;
     float: left;
     padding: 14px 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: sans-serif;
     text-align: center;
     
 }
@@ -47,8 +47,13 @@ h2{
     font-family: sans-serif;
 }
 footer{
-    overflow: hidden;
+    height: auto;
+    width: 100%;
+    position:fixed;
+
+    /* overflow:scroll; */
     background-color: red;
+    bottom: 0px;
 }
 footer a{
     display: block;
@@ -169,6 +174,11 @@ iframe{
     margin: 5px;
 }
 
+.about p{
+    height: 100vh;
+    margin: auto;
+}
+
 .yt{
     color: red;
 }
@@ -181,6 +191,56 @@ iframe{
     nav{
         flex-direction: column;
         padding: 10px 0px
+    }
+
+    h2{
+        font-size: small;
+    }
+    span{
+        padding: 10px 20px;
+    }
+    section {
+        text-align: center;
+        height:min-content;
+        min-height: 60vh;
+        padding: 25px;
+    }
+    .lvideos{
+        min-height: 40vh;
+    }
+    .articleimg{
+        height: 125px;
+        margin-right: 20px;
+    }
+
+    .articles h3{
+        text-align :center;
+        padding-left: 60px;
+    }
+    .tphoto img{
+        max-width: 100%;
+        height: 200px;
+    }
+    .about a{
+        font-size: small;
+        margin: auto;
+        padding: 5px 5px;
+
+    }
+    .about p{
+        height: 100vh;
+        margin: auto;
+        font-size: small;
+        padding-bottom: 10px 0px 20px 0px;
+    }
+    footer{
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 20px;
+    }
+    footer a{
+        font-size: smaller;
     }
     
     .flex-align-right{
