--- a/mega.css
+++ b/mega.css
@@ -187,7 +187,7 @@ iframe{
     color: #dd2a7b;
 }
 
-@media screen and (max-width:700px) {
+@media screen and (max-width:1000px) {
     nav{
         flex-direction: column;
         padding: 10px 0px
@@ -209,8 +209,8 @@ iframe{
         min-height: 40vh;
     }
     .articleimg{
-        height: 125px;
-        margin-right: 20px;
+        height: 100%;
+        width: 100%;
     }
 
     .articles h3{
@@ -219,7 +219,7 @@ iframe{
     }
     .tphoto img{
         max-width: 100%;
-        height: 200px;
+        height: 100%;
     }
     .about a{
         font-size: small;
