--- a/mega.css
+++ b/mega.css
@@ -217,7 +217,7 @@ iframe{
         text-align :center;
         padding-left: 60px;
     }
-    .tphoto img{
+    .img-responsivness{
         max-width: 100%;
         height: 100%;
     }
