--- a/mega.css
+++ b/mega.css
@@ -219,7 +219,7 @@ iframe{
     }
     .img-responsivness{
         max-width: 100%;
-        height: 50%;
+        height: auto;
     }
     .about a{
         font-size: small;
